force-app/main/default/objects/sugati__Invoice_Address__c/sugati__Invoice_Address__c.object-meta.xml
<CustomObject>
    <label>Invoice Address</label>
    <nameField>
        <label>Invoice Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>