force-app/main/default/objects/sugati__Invoice_Address__c/fields/sugati__S_IA_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IA_Address_Line_2__c</fullName>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>