force-app/main/default/objects/sugati__Invoice_Address__c/fields/sugati__S_IA_City__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IA_City__c</fullName>
    <label>City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>