force-app/main/default/objects/sugati__Invoice_Address__c/fields/sugati__S_IA_Contact__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IA_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoice Address</relationshipLabel>
    <relationshipName>Invoice_Address</relationshipName>
    <type>Lookup</type>
</CustomField>