force-app/main/default/objects/sugati__Invoice_Address__c/fields/sugati__S_IA_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IA_Country__c</fullName>
    <description>Country / Region</description>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>