force-app/main/default/objects/sugati__Invoice_Address__c/fields/sugati__S_IA_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IA_PostalCode__c</fullName>
    <description>Zip / Postal Code</description>
    <label>PostalCode</label>
    <length>12</length>
    <type>Text</type>
</CustomField>