force-app/main/default/objects/sugati__Invoice_Address__c/fields/sugati__S_IA_State__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IA_State__c</fullName>
    <description>State / Province</description>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>